# TribesViewer

./: CMakeLists.txt  LICENSE  Readme.md
TribesViewer/: AppDelegate.mm  CommonData.cpp  CommonData.h  CommonShaderTypes.h  CommonShaders.metal  GLRenderHelper.cpp  Info.plist  MetalRendererHelper.mm  RendererHelper.h  SDLApple.mm  WGPURenderHelper.cpp  encodedNormals.h  lineShader.wgsl  main.cpp  modelShader.wgsl  terrainShader.wgsl
TribesViewer.xcodeproj/: project.pbxproj
TribesViewer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TribesViewer/Base.lproj/: MainMenu.xib
imgui/: imgui_impl_metal.h  imgui_impl_metal.mm  imgui_impl_sdl.cpp  imgui_impl_wgpu.cpp  imgui_impl_wgpu.h
slm/: intersect_util.cpp  license.txt  mat4.cpp  quat.cpp
